fix "@Value를 이용한 환경 분리"

--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -84,4 +84,10 @@ logging.level:
   org.hibernate.SQL: debug
 #  org.hibernate.type: trace
 
+custom:
+  upload:
+    path: "/Users/Board/upload"
+  ckeditor:
+    path: "/Users/Board/Pictures/CKPictures/"
+
 
