--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -82,5 +82,14 @@ spring:
 logging.level:
   org.hibernate.SQL: debug
 #  org.hibernate.type: trace
+custom:
+  upload:
+    path: "/Users/Board/upload"
+  ckeditor:
+    path: "/Users/Board/Pictures/CKPictures/"
+server:
+  servlet:
+    session:
+      timeout: 1800
 
 
