--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -2,6 +2,10 @@ spring:
   config:
     activate:
       on-profile: local
+
+  messages:
+    basename: errors
+
   datasource:
     driver-class-name: org.h2.Driver
     url: jdbc:h2:tcp://localhost/~/boarddb
