--- a/build.gradle
+++ b/build.gradle
@@ -78,6 +78,9 @@ dependencies {
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	// https://mvnrepository.com/artifact/org.mariadb.jdbc/mariadb-java-client
 	implementation 'org.mariadb.jdbc:mariadb-java-client:3.0.6'
+
+	//p6spy
+//	implementation('com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1')
 }
 def querydslDir = "$buildDir/generated/querydsl"
 querydsl {
