--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -32,15 +32,21 @@ spring:
       client:
         registration:
           google:
-            client-id: 1066820222694-8sf8kpqjq7oquuc7orbmvscffk66ujcn.apps.googleusercontent.com
-            client-secret: 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
+            client-id: 20753470731-a409mgu4ukce2h7ps41vnlbi0dhog4nl.apps.googleusercontent.com
+            client-secret: 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
             scope:
               - email
               - profile
+          facebook:
+            client-id: 5529594730443349
+            client-secret: 9516b25f796b9ac4a63117f6b3b98f69
+            scope:
+              - email
+              - public_profile
 
           naver:
-            client-id: 2c7HTfLlILn5eHzKR2_3
-            client-secret: mtziAj7uZu
+            client-id: rOUBxQyJhlgnS6g8TJEa
+            client-secret: EaoSfneJSl
             scope:
               - name
               - email
@@ -48,12 +54,12 @@ spring:
 
             client-name: Naver
             authorization-grant-type: authorization_code
-            redirect-uri: http://ec2-43-201-132-89.ap-northeast-2.compute.amazonaws.com/login/oauth2/code/naver
+            redirect-uri: http://localhost:8080/login/oauth2/code/naver
 
           kakao:
             client-id: fa3a945946b115e5706faa5317e23786
             client-secret: jU7yRoeWOe9I6jQ8nEHXwd7DQsZNZJpX
-            redirect-uri: http://ec2-43-201-132-89.ap-northeast-2.compute.amazonaws.com/login/oauth2/code/kakao
+            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
             client-name: kakao
             authorization-grant-type: authorization_code
             client-authentication-method: POST
@@ -72,7 +78,6 @@ spring:
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
-
 logging.level:
   org.hibernate.SQL: debug
 #  org.hibernate.type: trace
