--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -18,8 +18,10 @@ spring:
       ddl-auto: create
     properties:
       hibernate:
+        #        show_sql: true
         format_sql: true
         default_batch_fetch_size: 1000 #최적화 옵션
+  #    open-in-view: false
   mvc:
     view:
       prefix: /WEB-INF/views/
@@ -30,33 +32,28 @@ spring:
       client:
         registration:
           google:
-            client-id: 20753470731-a409mgu4ukce2h7ps41vnlbi0dhog4nl.apps.googleusercontent.com
-            client-secret: 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
+            client-id: 1066820222694-8sf8kpqjq7oquuc7orbmvscffk66ujcn.apps.googleusercontent.com
+            client-secret: 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
             scope:
               - email
               - profile
-          facebook:
-            client-id: 5529594730443349
-            client-secret: 9516b25f796b9ac4a63117f6b3b98f69
-            scope:
-              - email
-              - public_profile
 
           naver:
-            client-id: rOUBxQyJhlgnS6g8TJEa
-            client-secret: EaoSfneJSl
+            client-id: 2c7HTfLlILn5eHzKR2_3
+            client-secret: mtziAj7uZu
             scope:
               - name
               - email
+            #              - profile-image 되는 데 지금은 사용안함
 
             client-name: Naver
             authorization-grant-type: authorization_code
-            redirect-uri: http://localhost:8080/login/oauth2/code/naver
+            redirect-uri: http://ec2-43-201-132-89.ap-northeast-2.compute.amazonaws.com/login/oauth2/code/naver
 
           kakao:
             client-id: fa3a945946b115e5706faa5317e23786
             client-secret: jU7yRoeWOe9I6jQ8nEHXwd7DQsZNZJpX
-            redirect-uri: http://localhost:8080/login/oauth2/code/kakao
+            redirect-uri: http://ec2-43-201-132-89.ap-northeast-2.compute.amazonaws.com/login/oauth2/code/kakao
             client-name: kakao
             authorization-grant-type: authorization_code
             client-authentication-method: POST
@@ -75,6 +72,7 @@ spring:
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me
             user-name-attribute: id
+
 logging.level:
   org.hibernate.SQL: error
 #  org.hibernate.type: trace
@@ -87,5 +85,3 @@ server:
   servlet:
     session:
       timeout: 1800
-
-
